# pycon-2023-honey-i-broke-the-pytorch-model

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Home.py  Pipfile  Readme.md  main.py  pyproject.toml
pages/: 01 About me.py  01 🧾 About me.py  1 🔨 Breaking a model.py  10 🔨 Breaking a model.py  2 💾 Synthetic data from scratch.py  20 💾 Synthetic data from scratch.py  21 🚢 Hands On Example: Change Detection.py  21 🚢 Hands On Example: Computer Vision.py  21 🚢 Hands-on example: Computer Vision.py  22 🚢 Ship builder.py  30 📦 Packages for synthetic data.py  4 🩺 Model Diagnostics.py  50 🧪 Tests for PyTorch models.py  51 🩺 Model Diagnostics.py  60 ✔️ Robust PyTorch model setup.py  60 ✔️ Robust model training setup.py  70 🎁 Wrapping it up.py  test.ipynb
pages/torch_examples/: broken_models.ipynb  create_data.sh  csv_utils.py  data_generation.py  model.py  plot_utils.py  run_cleanlab.py  run_ww.py  train_models.py  train_utils.py
pages/torch_examples/label_mixup/: circles_corrupted.csv  circles_corrupted_cleanlab_pred.csv  circles_uncorrupted.csv
pages/torch_examples/metrics_csv/: circles_corrupted_cleanlab_pred.csv  circles_corrupted_test.csv
pages/torch_examples/reformatted_metrics/: circle_data.csv  circle_data_froze_bias.csv  circle_data_frozen.csv  circle_data_frozen_bias.csv  circle_data_frozen_weights.csv  circle_data_no_relu.csv  circle_data_weights.csv  circle_dataloader_broken.csv  circle_large_data.csv  circle_large_dataloader_broken.csv  circle_large_frozen_bias.csv  circle_large_frozen_weights.csv  circle_large_no_dataloader.csv  circle_large_no_relu.csv  (+6 more)
(+60 files in other folders)
